# pyapcupsdexporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.arm  README.md  apcupsd-influxdb-exporter.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
pyapcupsexporter/: main.py
